--- a/src/app/main-content/projects/projects.component.scss
+++ b/src/app/main-content/projects/projects.component.scss
@@ -8,6 +8,8 @@
   position: relative;
   overflow-x: hidden;
   overflow-y: hidden;
+  z-index: 1;
+  position: relative;
 }
 
 .portfolio_header {
