--- a/src/app/main-content/skill-set/skills-desktop.component.scss
+++ b/src/app/main-content/skill-set/skills-desktop.component.scss
@@ -399,7 +399,7 @@ $paddingRightText1200: 80px;
   background: url("/assets/img/skills/skills_green_shadow.png");
   background-repeat: no-repeat;
   background-size: contain;
-  z-index: 1;
+  z-index: 2;
 }
 
 .skills-blob-container {
